[project]
name = "bbs-tonnage"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "python-multipart>=0.0.9",
  "pdfplumber>=0.11",
  "camelot-py>=0.11.0",
  "opencv-python-headless>=4.9.0.80",
  "reportlab>=4.0",
  "jinja2>=3.1",
]

[tool.ruff]
line-length = 100
